--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,16 @@
         android:theme="@style/Theme.RodentsHelper"
         tools:targetApi="31">
         <activity
-            android:name=".ViewRodents"
+            android:name=".RodentEdit"
             android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".ViewRodents"
+            android:exported="false"
+            android:noHistory="true">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -39,7 +47,7 @@
         </activity>
         <activity
             android:name=".AddRodents"
-            android:exported="true"></activity>
+            android:exported="true" />
     </application>
 
 </manifest>
