--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,9 @@
                 android:value="" />
         </activity>
         <activity
+            android:name=".ViewVets"
+            android:exported="true" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
@@ -47,6 +50,9 @@
         </activity>
         <activity
             android:name=".AddRodents"
+            android:exported="true" />
+        <activity
+            android:name=".AddVets"
             android:exported="true" />
     </application>
 
