--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -52,10 +53,10 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".AddRodents"
+            android:name=".ROOM.Rodent.AddRodents"
             android:exported="true" />
         <activity
-            android:name=".AddVets"
+            android:name=".ROOM.Vet.AddVets"
             android:exported="true" />
     </application>
 
