--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,9 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
 
     <application
         android:allowBackup="true"
@@ -19,6 +22,9 @@
         android:theme="@style/Theme.RodentsHelper"
         tools:targetApi="31"
         >
+
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="@string/map_key"/>
 
         <activity
             android:name=".ROOM.Rodent.ViewRodents"
@@ -85,6 +91,9 @@
             android:exported="true" />
         <activity
             android:name=".ROOM.Weights.WeightView"
+            android:exported="true" />
+        <activity
+            android:name=".MainViews.GoogleMaps.GoogleMaps"
             android:exported="true" />
     </application>
 
