Download database from VPS (prototype)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -95,6 +95,9 @@
         <activity
             android:name=".MainViews.GoogleMaps.GoogleMaps"
             android:exported="true" />
+        <activity
+            android:name=".Encyclopedia.Treats.ViewTreats"
+            android:exported="true" />
     </application>
 
 </manifest>
