bug fixes and improvements

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -98,6 +98,9 @@
         <activity
             android:name=".Encyclopedia.Treats.ViewTreats"
             android:exported="true" />
+        <activity
+            android:name=".ROOM.Weights.WeightInfo"
+            android:exported="true" />
     </application>
 
 </manifest>
