--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ plugins {
 
 android {
     namespace 'com.example.rodentshelper'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId 'com.example.rodentshelper'
-        minSdk 22
-        targetSdk 32
+        minSdk 21
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -52,4 +52,7 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
     implementation 'com.google.android.libraries.places:places:2.7.0'
+
+    implementation 'androidx.work:work-runtime:2.7.1'
+    implementation 'com.google.guava:guava:27.0.1-android'
 }
