--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
-    <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS"/>
+
     <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
     <uses-permission android:name="android.permission.USE_EXACT_ALARM"></uses-permission>
 
@@ -114,7 +114,7 @@
             android:name=".Notifications.NotificationsActivity"
             android:exported="true" />
         <receiver
-            android:name=".Notifications.MyReceiver"
+            android:name=".Notifications.NotificationReceiver"
             android:enabled="true"
             android:exported="true">
         </receiver>
