--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,8 @@
 
         <activity
             android:name=".ROOM.Rodent.ViewRodents"
-            android:exported="false">
+            android:exported="false"
+            android:icon="@drawable/ic_bin">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -56,7 +57,7 @@
             android:name=".MainViews.MainActivity"
             android:exported="true" />
         <activity
-            android:name=".MainViews.FirstStart"
+            android:name=".MainViews.SplashScreen"
             android:exported="true"
             android:noHistory="true">
             <intent-filter>
@@ -69,6 +70,9 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+        <activity
+            android:name=".MainViews.FirstStart"
+            android:exported="true" />
         <activity
             android:name=".ROOM.Rodent.AddRodents"
             android:exported="true" />
