Database export prototype

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,6 @@ dependencies {
     implementation 'com.google.guava:guava:27.0.1-android'
 
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.10'
+
+    implementation group: 'commons-io', name: 'commons-io', version: '2.5'
 }
