--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:required="false" />
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
@@ -23,6 +23,11 @@
 
     <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
     <uses-permission android:name="android.permission.USE_EXACT_ALARM"></uses-permission>
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32" />
 
     <uses-permission android:name="android.permission.CALL_PHONE" />
 
@@ -127,6 +132,11 @@
         <activity
             android:name=".Notifications.NotificationsActivity"
             android:exported="true" />
+        <activity
+            android:name=".DatabaseManagement.ActivityDatabaseManagement"
+            android:exported="true" />
+
+
         <receiver
             android:name=".Notifications.Receivers.NotificationReceiverWeight"
             android:enabled="true"
