--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,6 @@ dependencies {
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.10'
 
     implementation group: 'commons-io', name: 'commons-io', version: '2.5'
+
+    implementation group: 'at.favre.lib', name: 'bcrypt', version: '0.9.0'
 }
