--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -61,4 +61,8 @@ dependencies {
     implementation group: 'commons-io', name: 'commons-io', version: '2.5'
 
     implementation group: 'at.favre.lib', name: 'bcrypt', version: '0.9.0'
+
+    //https://mvnrepository.com/artifact/org.jasypt/jasypt
+    implementation group: 'org.jasypt', name: 'jasypt', version: '1.9.3'
+
 }
