--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,12 +17,12 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
-
-    <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
-    <uses-permission android:name="android.permission.USE_EXACT_ALARM"></uses-permission>
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.USE_EXACT_ALARM" />
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
@@ -163,6 +163,10 @@
             android:screenOrientation="portrait"/>
         <activity
             android:name="com.gryzoniopedia.rodentshelper.ActivityAboutApp"
+            android:exported="true"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name="com.gryzoniopedia.rodentshelper.ActivityProgressBar"
             android:exported="true"
             android:screenOrientation="portrait"/>
 
