--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId 'com.gryzoniopedia.rodentshelper'
         minSdk 24
         targetSdk 33
-        versionCode 17
-        versionName "1.0.6"
+        versionCode 18
+        versionName "1.0.6_2"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
