Minor fixes + notes images

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,10 +11,16 @@ android {
         applicationId 'com.gryzoniopedia.rodentshelper'
         minSdk 24
         targetSdk 33
-        versionCode 23
-        versionName "1.0.7_4"
+        versionCode 24
+        versionName "1.0.8"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
     }
 
     buildTypes {
@@ -44,9 +50,9 @@ dependencies {
 
     implementation 'com.squareup.picasso:picasso:2.8'
 
-    implementation 'androidx.room:room-runtime:2.2.5'
+    implementation 'androidx.room:room-runtime:2.5.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    annotationProcessor 'androidx.room:room-compiler:2.2.5'
+    annotationProcessor 'androidx.room:room-compiler:2.5.0'
 
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
