Refreshed drawer bar + minor fixes

--- a/app/.gitignore
+++ b/app/.gitignore
@@ -2,3 +2,4 @@
 /src/main/java/com/example/rodentshelper/db.properties
 /src/main/assets/db.properties
 /src/main/res/values/strings.xml
+/src/main/res/values/map_api.xml
